--- a/cyberunner/Base.lproj/Main.storyboard
+++ b/cyberunner/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="NicoMoji-Regular.ttf">
+            <string>NicoMoji-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -18,7 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="926" height="428"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHI-JN-9aw">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHI-JN-9aw" userLabel="leftBtnsView">
                                 <rect key="frame" x="44.000000000000007" y="315.66666666666669" width="125.66666666666669" height="91.333333333333314"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GpM-6M-qPB" userLabel="Btn Up">
@@ -68,7 +73,7 @@
                                     <constraint firstItem="gN9-De-X2i" firstAttribute="width" secondItem="BGv-ZS-eZj" secondAttribute="width" id="xvG-rC-6wz"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MQM-en-e5J">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MQM-en-e5J" userLabel="rightBtnsView">
                                 <rect key="frame" x="756.33333333333337" y="315.66666666666669" width="125.66666666666663" height="91.333333333333314"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjb-t0-G1j" userLabel="Btn Kick">
@@ -109,11 +114,11 @@
                                     <constraint firstItem="qHt-uT-FOp" firstAttribute="top" secondItem="MQM-en-e5J" secondAttribute="top" id="xk3-IN-nav"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OEc-gn-UAy">
-                                <rect key="frame" x="419" y="27.999999999999996" width="463" height="42.666666666666657"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OEc-gn-UAy" userLabel="scoreView">
+                                <rect key="frame" x="555.66666666666663" y="5" width="370.33333333333337" height="42.666666666666664"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE: 000000  | BEST SCORE: 000000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="1" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rhf-pO-sni">
-                                        <rect key="frame" x="0.0" y="0.0" width="463" height="42.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="370.33333333333331" height="42.666666666666664"/>
                                         <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" name="appBlue"/>
@@ -129,23 +134,75 @@
                                     <constraint firstItem="Rhf-pO-sni" firstAttribute="centerY" secondItem="OEc-gn-UAy" secondAttribute="centerY" id="NHN-xs-FVI"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z9R-VV-1gf" userLabel="introView">
+                                <rect key="frame" x="127.66666666666669" y="40.666666666666657" width="670.66666666666652" height="325.66666666666674"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="introTitle" translatesAutoresizingMaskIntoConstraints="NO" id="fLX-UC-LDB" userLabel="Intro Name">
+                                        <rect key="frame" x="73" y="0.0" width="524.66666666666663" height="63"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpL-ed-PYZ" userLabel="Btn Play">
+                                        <rect key="frame" x="172.6666666666666" y="97.666666666666686" width="325.33333333333326" height="104"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <connections>
+                                            <action selector="BtnPlayPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="AOM-Ai-EhN"/>
+                                        </connections>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnPlay" translatesAutoresizingMaskIntoConstraints="NO" id="51v-jY-E8r" userLabel="btnPlay">
+                                        <rect key="frame" x="172.6666666666666" y="97.666666666666686" width="325.33333333333326" height="104"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="glU-Xs-htm" userLabel="Btn Leaderboard">
+                                        <rect key="frame" x="172.6666666666666" y="201.66666666666669" width="325.33333333333326" height="104"/>
+                                        <fontDescription key="fontDescription" name="NicoMoji-Regular" family="Nico Moji" pointSize="30"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <connections>
+                                            <action selector="BtnLeaderboardPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="yFf-9i-c1H"/>
+                                        </connections>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnLeaderboard" translatesAutoresizingMaskIntoConstraints="NO" id="xZc-uN-lEs">
+                                        <rect key="frame" x="172.6666666666666" y="201.66666666666669" width="325.33333333333326" height="104"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="xZc-uN-lEs" firstAttribute="width" secondItem="glU-Xs-htm" secondAttribute="width" id="6D4-ol-JPS"/>
+                                    <constraint firstItem="glU-Xs-htm" firstAttribute="top" secondItem="mpL-ed-PYZ" secondAttribute="bottom" id="6Lm-qv-Mhq"/>
+                                    <constraint firstItem="glU-Xs-htm" firstAttribute="width" secondItem="z9R-VV-1gf" secondAttribute="height" multiplier="1:1" id="ENB-Xf-1fv"/>
+                                    <constraint firstItem="glU-Xs-htm" firstAttribute="centerX" secondItem="z9R-VV-1gf" secondAttribute="centerX" id="GGw-Qh-OY5"/>
+                                    <constraint firstItem="51v-jY-E8r" firstAttribute="width" secondItem="mpL-ed-PYZ" secondAttribute="width" id="HN0-Q8-DAC"/>
+                                    <constraint firstItem="51v-jY-E8r" firstAttribute="height" secondItem="mpL-ed-PYZ" secondAttribute="height" id="HO1-W5-bd9"/>
+                                    <constraint firstItem="fLX-UC-LDB" firstAttribute="width" secondItem="z9R-VV-1gf" secondAttribute="height" multiplier="524:325" id="I36-li-cZV"/>
+                                    <constraint firstItem="mpL-ed-PYZ" firstAttribute="centerX" secondItem="z9R-VV-1gf" secondAttribute="centerX" id="RVv-nO-dXW"/>
+                                    <constraint firstItem="xZc-uN-lEs" firstAttribute="centerY" secondItem="glU-Xs-htm" secondAttribute="centerY" id="WtB-fp-kRO"/>
+                                    <constraint firstItem="mpL-ed-PYZ" firstAttribute="width" secondItem="z9R-VV-1gf" secondAttribute="height" multiplier="1:1" id="XrA-Rq-kNo"/>
+                                    <constraint firstItem="fLX-UC-LDB" firstAttribute="centerX" secondItem="z9R-VV-1gf" secondAttribute="centerX" id="ZM8-M5-RDk"/>
+                                    <constraint firstItem="51v-jY-E8r" firstAttribute="centerY" secondItem="mpL-ed-PYZ" secondAttribute="centerY" id="fgk-bp-jgf"/>
+                                    <constraint firstItem="51v-jY-E8r" firstAttribute="centerX" secondItem="mpL-ed-PYZ" secondAttribute="centerX" id="ht2-sM-hM5"/>
+                                    <constraint firstAttribute="bottom" secondItem="glU-Xs-htm" secondAttribute="bottom" constant="20" id="jbB-zo-wlZ"/>
+                                    <constraint firstItem="xZc-uN-lEs" firstAttribute="height" secondItem="glU-Xs-htm" secondAttribute="height" id="lTM-cS-uH0"/>
+                                    <constraint firstItem="fLX-UC-LDB" firstAttribute="top" secondItem="z9R-VV-1gf" secondAttribute="top" id="nbL-Ji-m7h"/>
+                                    <constraint firstItem="xZc-uN-lEs" firstAttribute="centerX" secondItem="glU-Xs-htm" secondAttribute="centerX" id="yr1-iU-qwJ"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="OEc-gn-UAy" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="28" id="3Zm-bB-Lm5"/>
+                            <constraint firstItem="OEc-gn-UAy" firstAttribute="top" secondItem="4qk-I5-YsI" secondAttribute="top" constant="5" id="3Zm-bB-Lm5"/>
                             <constraint firstAttribute="bottom" secondItem="MQM-en-e5J" secondAttribute="bottom" constant="21" id="7aX-Cf-NBs"/>
                             <constraint firstItem="qHt-uT-FOp" firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="width" id="BM5-mw-EyV"/>
                             <constraint firstItem="Jjb-t0-G1j" firstAttribute="height" secondItem="GpM-6M-qPB" secondAttribute="height" id="HQK-7V-hgC"/>
                             <constraint firstItem="Jjb-t0-G1j" firstAttribute="width" secondItem="GpM-6M-qPB" secondAttribute="width" id="Hgr-ah-Qf6"/>
                             <constraint firstItem="IHI-JN-9aw" firstAttribute="width" secondItem="4qk-I5-YsI" secondAttribute="width" multiplier="0.15" id="J4x-Og-efK"/>
                             <constraint firstAttribute="bottom" secondItem="IHI-JN-9aw" secondAttribute="bottom" constant="21" id="MZV-Da-Qqn"/>
-                            <constraint firstItem="OEc-gn-UAy" firstAttribute="width" secondItem="3se-qz-xqx" secondAttribute="width" multiplier="0.5" id="OhX-9h-9pe"/>
-                            <constraint firstAttribute="trailing" secondItem="OEc-gn-UAy" secondAttribute="trailing" constant="44" id="SCQ-KA-Gu0"/>
+                            <constraint firstItem="OEc-gn-UAy" firstAttribute="width" secondItem="3se-qz-xqx" secondAttribute="width" multiplier="0.4" id="OhX-9h-9pe"/>
+                            <constraint firstAttribute="trailing" secondItem="OEc-gn-UAy" secondAttribute="trailing" id="SCQ-KA-Gu0"/>
                             <constraint firstItem="MQM-en-e5J" firstAttribute="height" secondItem="IHI-JN-9aw" secondAttribute="height" id="Viw-IT-y8r"/>
                             <constraint firstItem="IHI-JN-9aw" firstAttribute="leading" secondItem="3se-qz-xqx" secondAttribute="leading" constant="44" id="aAD-5f-sJg"/>
+                            <constraint firstItem="z9R-VV-1gf" firstAttribute="width" secondItem="4qk-I5-YsI" secondAttribute="width" multiplier="0.8" id="jEF-eR-S4V"/>
+                            <constraint firstItem="z9R-VV-1gf" firstAttribute="centerY" secondItem="4qk-I5-YsI" secondAttribute="centerY" id="jXV-Ll-f5e"/>
                             <constraint firstItem="OEc-gn-UAy" firstAttribute="height" secondItem="3se-qz-xqx" secondAttribute="height" multiplier="0.1" id="kif-LC-7QI"/>
+                            <constraint firstItem="z9R-VV-1gf" firstAttribute="height" secondItem="4qk-I5-YsI" secondAttribute="height" multiplier="0.8" id="r1u-0e-rN6"/>
                             <constraint firstItem="qHt-uT-FOp" firstAttribute="height" secondItem="GpM-6M-qPB" secondAttribute="height" id="vPJ-SI-VDV"/>
+                            <constraint firstItem="z9R-VV-1gf" firstAttribute="centerX" secondItem="4qk-I5-YsI" secondAttribute="centerX" id="wHV-Pj-4Qf"/>
                             <constraint firstItem="MQM-en-e5J" firstAttribute="width" secondItem="IHI-JN-9aw" secondAttribute="width" id="y91-Jc-Uc9"/>
                             <constraint firstAttribute="trailing" secondItem="MQM-en-e5J" secondAttribute="trailing" constant="44" id="z7s-gM-eDk"/>
                         </constraints>
@@ -155,16 +212,22 @@
                         <outlet property="btnDownView" destination="gN9-De-X2i" id="QV1-lS-ZNw"/>
                         <outlet property="btnKick" destination="Jjb-t0-G1j" id="chL-Gz-z91"/>
                         <outlet property="btnKickView" destination="8Q1-qI-cyS" id="Erp-oT-6aJ"/>
+                        <outlet property="btnLeaderboard" destination="glU-Xs-htm" id="KSs-MR-jHE"/>
+                        <outlet property="btnPlay" destination="glU-Xs-htm" id="VkP-Q6-fUt"/>
                         <outlet property="btnPunch" destination="qHt-uT-FOp" id="9d9-5W-8U0"/>
                         <outlet property="btnPunchView" destination="vws-mx-XQ6" id="oAO-1a-AfB"/>
                         <outlet property="btnUp" destination="GpM-6M-qPB" id="8u0-fm-que"/>
                         <outlet property="btnUpView" destination="PaE-1k-Vre" id="Nb6-Mk-iML"/>
+                        <outlet property="introView" destination="z9R-VV-1gf" id="a0t-fl-AaI"/>
+                        <outlet property="leftBtnsView" destination="IHI-JN-9aw" id="S85-Bq-gBe"/>
+                        <outlet property="rightBtnsView" destination="MQM-en-e5J" id="lBg-Di-zFq"/>
                         <outlet property="scoreLabel" destination="Rhf-pO-sni" id="iJC-A0-Fnm"/>
+                        <outlet property="scoreView" destination="OEc-gn-UAy" id="n3D-hT-E0Z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.36501079913609" y="88.317757009345783"/>
+            <point key="canvasLocation" x="314" y="101"/>
         </scene>
     </scenes>
     <resources>
@@ -172,8 +235,11 @@
         <image name="btnDown" width="64" height="64"/>
         <image name="btnFoot" width="128" height="128"/>
         <image name="btnKick" width="64" height="64"/>
+        <image name="btnLeaderboard" width="328" height="104"/>
+        <image name="btnPlay" width="328" height="104"/>
         <image name="btnPunch" width="64" height="64"/>
         <image name="btnUp" width="64" height="64"/>
+        <image name="introTitle" width="524.33331298828125" height="63"/>
         <namedColor name="appBlue">
             <color red="0.22400000691413879" green="0.65499997138977051" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
